got facebook login working partway…

--- a/views/ns.jade
+++ b/views/ns.jade
@@ -45,24 +45,17 @@ block tabs
 block main
   .row
     article#main.eight.columns
-      #lfx_div.mboxDefault.lfx_tt(name="leadformix_test")
         
       h3
-        a(href="#") Cloud ERP That Reaches Across the Enterprise
+        a(href="/auth/facebook") Login with Facebook
       p 
-        | Your enterprise is moving fast — adding more subsidiaries, 
-        | more acquisitions, more geographies. But corporate Oracle 
-        | or SAP deployments make it impossible for your IT department 
-        | to keep pace. The result: fragmented ERP that limits visibility 
-        | slows financial consolidation, and increases compliance and
-        |  reporting risk
+        | Trying out facebook login with passport
+        
     .four.columns
       .row
         article#detail.four.columns
           .mboxDefault#optional_info
             img(src='images/120x100.gif')
-          script
-            mboxCreate('leadformix_test1');
 
         .eight.columns  
           h5
