--- a/apps/main/subscription_view.hbs
+++ b/apps/main/subscription_view.hbs
@@ -1,4 +1,5 @@
-        <ul class="nav nav-list bs-docs-sidenav">
-          <li class="active"><a href="#netflix"><i class="icon-chevron-right"></i> Netflix</a></li>
-          <li><a href="#vonage"><i class="icon-chevron-right"></i> Vonage</a></li>
-        </ul>
+<ul class="nav nav-list bs-docs-sidenav">
+	{{#each subscription}}
+  <li class="active"><a href="#netflix"><i class="icon-chevron-right"></i> {{this.name}}</a></li>
+  {{/each}}
+</ul>
