--- a/apps/main/subscription_view.hbs
+++ b/apps/main/subscription_view.hbs
@@ -1,5 +1,5 @@
 <ul class="nav nav-list bs-docs-sidenav">
 	{{#each subscription}}
-  <li class="active"><a href="#netflix"><i class="icon-chevron-right"></i> {{this.name}}</a></li>
+  <li><a href="#{{this.name}}"><i class="icon-chevron-right"></i>{{this.name}}</a></li>
   {{/each}}
 </ul>
