--- a/apps/main/login_view.hbs
+++ b/apps/main/login_view.hbs
@@ -1,4 +1,4 @@
-<div>
-	<a href="/auth/facebook"><img src="/img/Login.jpg"/></a>
-	<p>login using your facebook account</p>
+<div class="hero-unit">
+  <h2>Your Subscriptions made Simple</h2>
+  <a href="/auth/facebook"><img src="/img/fb_login_button.png"/></a>
 </div>
