able to pull right on the nav

--- a/apps/main/status_view.hbs
+++ b/apps/main/status_view.hbs
@@ -1,2 +1,3 @@
-<p>{{name}}</p>
-<button class="btn">Logout</button>
+<p class="navbar-text">
+  Welcome {{payload.first_name}}! &nbsp; &nbsp; &nbsp; &nbsp;<a href="#logout" class="navbar-link">Logout</a>
+</p>
