--- a/apps/main/subscription_list_view.hbs
+++ b/apps/main/subscription_list_view.hbs
@@ -1,5 +1,6 @@
 <ul class="nav nav-list bs-docs-sidenav">
+  <li><a href="#subscriptionXXX"><i class="icon-chevron-right"></i>XXX</a></li>
 	{{#each subscription}}
-  <li><a href="#subscription/{{this.name}}"><i class="icon-chevron-right"></i>{{this.name}}</a></li>
+  <li><a href="#subscription/{{this.id}}"><i class="icon-chevron-right"></i>{{this.name}}</a></li>
   {{/each}}
 </ul>
