--- a/apps/main/subscription_list_view.hbs
+++ b/apps/main/subscription_list_view.hbs
@@ -1,6 +1,5 @@
 <ul class="nav nav-list bs-docs-sidenav">
-  <li><a href="#subscriptionXXX"><i class="icon-chevron-right"></i>XXX</a></li>
-	{{#each subscription}}
-  <li><a href="#subscription/{{this.id}}"><i class="icon-chevron-right"></i>{{this.name}}</a></li>
+	{{#each this}}
+  <li><a href="#subscription/{{id}}"><i class="icon-chevron-right"></i>{{name}}</a></li>
   {{/each}}
 </ul>
