--- a/apps/main/subscription_list_view.hbs
+++ b/apps/main/subscription_list_view.hbs
@@ -1,5 +1,5 @@
 <ul class="nav nav-list bs-docs-sidenav">
 	{{#each this}}
-  <li><a href="#subscription/{{id}}"><i class="icon-chevron-right"></i>{{name}}</a></li>
+  <li><a href="#subscriptions/{{id}}"><i class="icon-chevron-right"></i>{{name}}</a></li>
   {{/each}}
 </ul>
