--- a/apps/main/subscription_detail_view.hbs
+++ b/apps/main/subscription_detail_view.hbs
@@ -1,3 +1,30 @@
-<h2>{{name}}</h2>
-<p>{{description}}</p>
-<p><a class="btn" href="#">Save &raquo;</a></p>
+<form class="form-horizontal">
+  <p class="lead">{{name}}: a {{description}}</p>
+
+  <div class="control-group">
+    <label class="control-label" for="userName">User</label>
+    <div class="controls">
+      <input type="text" id="userName" placeholder="email">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label" for="inputPassword">Password</label>
+    <div class="controls">
+      <input type="password" id="inputPassword" placeholder="Password">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label" for="inputPassword2  ">Password</label>
+    <div class="controls">
+      <input type="password" id="inputPassword2" placeholder="Password">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <div class="controls">
+      <button type="submit" class="btn">Sign in</button>
+    </div>
+  </div>
+</form>
